# VSTorchProject

./: .gitignore  CMakeLists.txt  TorchProject03.sln  wavreader.h
Inference01/: Inference01.vcxproj  Inference01.vcxproj.filters  main_inference.cpp
RpiInference/: main_rpi_inference copy.cpp  main_rpi_inference.cpp
SoundRecorderPi/: main_recorder.cpp
TorchProject03/: TorchProject03.vcxproj  TorchProject03.vcxproj.filters  main.cpp  main_torch.cpp
Wav2Mfcc2/: Wav2Mfcc2.vcxproj  Wav2Mfcc2.vcxproj.filters  main_wav2mfcc.cpp
